[나] facebook 로그인 연동 개발 중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,13 @@ spring:
   security:
     user:
       name: test
-      password: 1234   
-
+      password: 1234
+    oauth2:
+      client:
+        registration:
+          facebook:
+            client-id: 1165102718464666
+            client-secret: 6016bc8822480b2aeb99f1fb4f5727fd
+            scope: public_profile, email
 file:
   path: C:/workspace/springbootwork/upload/  
